--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,8 @@
     
     /* Coach Bereich - Links */
     .coach-section {
-      background: white;
-      border-radius: 16px;
+      background: transparent;
       padding: 24px;
-      box-shadow: 0 8px 32px rgba(0,0,0,0.1);
       position: sticky;
       top: 16px;
       display: flex;
@@ -45,8 +43,6 @@
       width: 100%;
       max-width: 300px;
       height: auto;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
     
     .coach-info {
