--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,10 @@
     
     /* Coach Bereich - Links */
     .coach-section {
-      background: transparent;
+      background: white;
+      border-radius: 16px;
       padding: 24px;
+      box-shadow: 0 8px 32px rgba(0,0,0,0.1);
       position: sticky;
       top: 16px;
       display: flex;
@@ -43,6 +45,7 @@
       width: 100%;
       max-width: 300px;
       height: auto;
+      /* Kein border-radius, kein box-shadow - Bild pur! */
     }
     
     .coach-info {
