--- a/public/student-image-quiz.html
+++ b/public/student-image-quiz.html
@@ -358,6 +358,11 @@
           🎤 Objekt benennen
         </button>
         
+        <p style="text-align: center; color: #666; font-size: 14px; margin-top: 8px;">
+          💡 Du kannst auch mehrere Objekte auf einmal nennen!<br>
+          (Singular und Plural werden akzeptiert)
+        </p>
+        
         <div class="transcription" id="transcription">
           <div class="transcription-label">Du hast gesagt:</div>
           <div class="transcription-text" id="transcription-text">apple</div>
